Fixed a bug where profile image was not visible on rightbar and changed some styling

--- a/client/src/components/rightBar/rightBar.scss
+++ b/client/src/components/rightBar/rightBar.scss
@@ -11,6 +11,7 @@
   flex-direction: column;
   justify-content: space-between;
   overflow: hidden;
+  border: 1px solid var(--theme-color);
 
   @include smd {
     display: none;
